--- a/mastertest.yml
+++ b/mastertest.yml
@@ -22,7 +22,7 @@ resources:
   - name: ns_dockerbuild_gitRepo
     type: GitRepo
     configuration:
-      path: vishnurao12/sample-script
+      path: shiptest-bt/pipelines
       gitProvider: git_v
       branches: 
         include: master
@@ -44,14 +44,14 @@ resources:
   - name: artifactory_go_example
     type: GitRepo
     configuration:
-      path: vishnurao12/project-examples
+      path: shiptest-bt/pipelines
       branches:
         include: master
       gitProvider: git_v
   - name: artifactory_go_exampletest
     type: GitRepo
     configuration:
-      path: vishnurao12/project-examples
+      path: shiptest-bt/pipelines
       branches:
         include: master
       gitProvider: git_v
@@ -59,7 +59,7 @@ resources:
   - name: artifactory_go_module_example
     type: GitRepo
     configuration:
-      path: vishnurao12/artifactory-go-example
+      path: shiptest-bt/pipelines
       branches:
         include: master
       gitProvider: git_v
@@ -96,7 +96,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/project-examples
+      path: shiptest-bt/pipelines
 
   - name: build_info_gradle
     type: BuildInfo
@@ -130,12 +130,12 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/project-examples
+      path: shiptest-bt/pipelines
 
   - name: npmHelloWorld_repo
     type: GitRepo
     configuration:
-      path: vishnurao12/npmHelloWorld
+      path: shiptest-bt/pipelines
       gitProvider: git_v
 
   - name: npm_build_info_publish1
@@ -156,7 +156,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/charts
+      path: shiptest-bt/pipelines
    
   - name: helm_repo
     type: HelmChart
