--- a/multipipe.yml
+++ b/multipipe.yml
@@ -3,7 +3,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: master
       files:
@@ -16,7 +16,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: ^{{gitBranch}}$
       files:
@@ -28,7 +28,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: ^{{gitBranch}}$
       files:
@@ -40,7 +40,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: ^{{gitBranch}}$
       files:
@@ -49,7 +49,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: ^{{gitBranch}}$
       files:
@@ -58,7 +58,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: ^{{gitBranch}}$
       files:
@@ -67,7 +67,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: ^{{gitBranch}}$
       files:
@@ -76,7 +76,7 @@ resources:
     type: GitRepo
     configuration:
       gitProvider: git_v
-      path: vishnurao12/Org_test_Automation
+      path: shiptest-bt/pipelines
       branches:
         include: ^{{gitBranch}}$
       files:
